--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@tailwindcss/vite": "^4.0.17",
         "astro": "^5.13.10",
         "marked": "^15.0.7",
+        "minisearch": "^7.2.0",
         "tailwindcss": "^4.0.17"
     },
     "devDependencies": {
