--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "astro dev",
         "build": "astro build",
         "preview": "astro preview",
-        "astro": "astro"
+        "astro": "astro",
+        "setup-giscus": "node scripts/setup-giscus.js"
     },
     "dependencies": {
         "@astrojs/mdx": "^4.2.3",
